--- a/styles/techwave.css
+++ b/styles/techwave.css
@@ -91,9 +91,132 @@
 
 .nav-link{
     text-decoration: none;
-    color: #FFFF;
     font-size: 1rem;
     font-weight: 500;
+}
+
+/* hero section related styles */
+
+.hero{
+    position: relative;
+    height: 760px;
+    background: #1A0B2E;
+    overflow: hidden;
+}
+.hero-bg-wrap{
+    position: absolute;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-bg-wrap img{
+    height: 100%;
+    width: 100%;         
+}
+.hero-content{
+    position: relative;
+    height: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.hero-icon{
+    position: relative;
+    width: 350px;
+    height: 350px;
+    margin-bottom: 40px;
+}
+.hero-badge-icon{
+    position: absolute;
+    top: 12px;
+    right: 12px;
+
+    background: #00FF88;
+    color: #000;
+    font-size: 1.2rem;
+    font-weight: 600;
+    padding: 8px 16px;
+    border-radius: 1000px;
+}
+.hero-circle{
+    width: 100%;
+    height: 100%;
+}
+.hero-mic{
+    position: absolute;
+    width: 110px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.hero-title{
+    font-size: 3.75rem;
+    margin-bottom: 8px;
+}
+.hero-subtitle{
+    font-size: 1rem;
+    margin-bottom: 24px;
+}
+.hero-buttons{
+    display: flex;
+    gap: 16px;
+}
+
+/* about related styles */
+
+.about-section{
+    padding: 100px 20px;
+    text-align: center;
+}
+
+.about-container{
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.about-title{
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.about-text{
+    font-size: 1rem;
+    line-height: 1.7;
+    max-width: 900px;
+    margin: 0 auto 50px;
+}
+
+.about-divider{
+    width: 100%;
+    height: 1px;
+    background: #FFFF;
+    margin: 50px 0;
+}
+
+/* about-stats */
+.about-info{
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.info-item h3{
+    color: #00FF88;
+    font-size: 3rem;
+    font-weight: 900;
+    margin-bottom: 16px;
+}
+
+.info-item p{
+    font-size: 1rem;
+    font-weight: 400;
+    color: #FFFF;
 }
 
 
@@ -102,3 +225,10 @@
 
 
 /* for responsive */
+@media screen and (max-width:576) {
+  .navbar,
+  .nav-links{
+    flex-direction: column;
+  }
+  
+}
