--- a/styles/techwave.css
+++ b/styles/techwave.css
@@ -173,52 +173,104 @@
     padding: 100px 20px;
     text-align: center;
 }
-
 .about-container{
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
 }
-
 .about-title{
     font-size: 3rem;
     font-weight: 700;
     margin-bottom: 16px;
 }
-
 .about-text{
     font-size: 1rem;
     line-height: 1.7;
     max-width: 900px;
     margin: 0 auto 50px;
 }
-
 .about-divider{
     width: 100%;
     height: 1px;
     background: #FFFF;
     margin: 50px 0;
 }
-
 /* about-stats */
 .about-info{
     justify-content: space-between;
     gap: 20px;
 }
-
 .info-item h3{
     color: #00FF88;
     font-size: 3rem;
     font-weight: 900;
     margin-bottom: 16px;
 }
-
 .info-item p{
     font-size: 1rem;
     font-weight: 400;
     color: #FFFF;
 }
 
+/* why choose related styles */
+
+.why-section{
+    padding: 120px 200px;
+}
+.why-title{
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 40px;
+}
+/* grid styles */
+.premium{
+    grid-area: premium;
+}
+.mobile{
+    grid-area: mobile;
+}
+.global{
+    grid-area: global;
+}
+.exclusive{
+    grid-area: exclusive;
+}
+.resources{
+   grid-area: resources; 
+}
+.why-container{
+    max-width: 1200px;
+    margin: 0 auto;
+
+    display: grid;
+    gap: 30px;
+    
+    grid-template-areas:
+        "premium  mobile mobile"
+        "premium  global global"
+        "exclusive exclusive resources";
+}
+
+/* card style */
+.why-card{
+    background: rgba(53, 17, 101, 0.4);
+    padding: 28px;
+    border-radius: 20px;
+    color: #FFFF;
+}
+.why-card img{
+    width: 60px;
+    margin-bottom: 16px;
+}
+.why-card h3{
+    font-size: 1.5rem;
+    margin-bottom: 16px;
+    font-weight: 600;
+}
+.why-card p{
+    font-size: 1rem;
+    font-weight: 400;
+}
 
 
 
@@ -230,5 +282,20 @@
   .nav-links{
     flex-direction: column;
   }
-  
+  .why-container{
+    grid-template-areas:
+        "premium"
+         "mobile"
+         "global"
+         "exclusive"
+         "resources"
+  }
+  .why-container{
+    justify-items: center;
+    gap: 24px;
+    margin-right: 20px;
+  }
+
+
+
 }
