--- a/styles/techwave.css
+++ b/styles/techwave.css
@@ -272,7 +272,60 @@
     font-weight: 400;
 }
 
+/* featured episode */
 
+.featured-section{
+    padding: 120px 200px;
+    text-align: center;
+}
+.section-title{
+    font-size: 3rem;
+    font-weight: 700;  
+}
+.featured-container{
+    max-width: 1200px;
+    margin: 60px auto 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+.episode-card{
+    background: #250D44;
+    border-radius: 20px;
+    padding: 24px 24px 145px 24px;
+    height: 440px;
+    width: 380px;
+    text-align: left;
+}
+.video-wrapper{
+    width: 100%;
+    height: 200px;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-bottom: 24px;
+}
+.video-wrapper iframe{
+    width: 100%;
+    height: 100%;
+}
+.episode-card h3{
+    font-size: 1.5rem;
+    margin-bottom: 12px;
+}
+.episode-card p{
+    font-size: 1rem;
+    margin-bottom: 10px;
+}
+.episode-time{
+    font-size: 1rem;
+    color: #00FF88;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+.episode-time img{
+    width: 20px;
+}
 
 
 
