--- a/styles/techwave.css
+++ b/styles/techwave.css
@@ -272,7 +272,7 @@
     font-weight: 400;
 }
 
-/* featured episode */
+/* featured episode style */
 
 .featured-section{
     padding: 120px 200px;
@@ -327,6 +327,69 @@
     width: 20px;
 }
 
+/* meet the host section style */
+
+.host-section{
+    padding: 100px 20px;
+    text-align: center;
+}
+
+.host-card{
+    max-width: 1200px;
+    margin: 40px auto 0;
+    background: #241046;
+    border-radius: 24px;
+    padding: 30px;
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    color: #FFFF;
+}
+
+.host-card img{
+    width: 120px;
+    border-radius: 50%;
+}
+.host-info{
+    text-align: left;
+}
+
+.host-info h3{
+    margin-bottom: 8px;
+}
+
+.host-info p{
+    font-size: 1rem;
+    color: #FFFF;
+    margin-bottom: 14px;
+}
+
+/* HOST SOCIAL ICONS – FIXED */
+
+.host-social{
+    display: flex;
+    gap: 14px;
+}
+
+/* circle */
+.social-circle{
+    width: 40px;
+    height: 40px;
+
+    border-radius: 50%;
+    border: 1px solid #412567;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+/* icon */
+.social-circle img{
+    width: 16px;
+    height: 16px;
+}
 
 
 /* for responsive */
